--- a/cpprest/CMakeLists.txt
+++ b/cpprest/CMakeLists.txt
@@ -3,3 +3,4 @@
 add_executable(BingSearch bing_search.cpp)
 target_link_libraries(BingSearch ${Boost_LIBRARIES})
 target_link_libraries(BingSearch cpprest)
+target_link_libraries(BingSearch crypto ssl)
